--- a/templates/eleve/colloscope.html
+++ b/templates/eleve/colloscope.html
@@ -2,57 +2,208 @@
 {% load static %}
 {% load customfilter %}
 {% block body %}
-<table class="accueil"><tr><td>Colloscope de la classe de {{classe}}</td></tr></table>
+<div class="ui text container">
+    <h1 class="ui center aligned icon header">
+{% if request.GET.print %}
+{% else %}
+        <i class="circular table icon"></i>
+{% endif %}
+        Colloscope de la classe de {{classe}}
+{% if request.GET.print %}
+{% else %}
+    {% if isprof %}
+    <br/>
+    <a class="ui button primary large" href="{% url user.colleur|yesno:'colloscopemodif_colleur,colloscopemodif_secret' classe.pk semin.pk semax.pk %}">Modifier le colloscope</a>
+    {% endif %}
+{% endif %}
+    </h1>
+
+{% if request.GET.print %}
+{% else %}
+
 <form method="POST">
 {% csrf_token %}
-<table class="tableausimple">
+<table class="ui table striped">
 <tr>
 	<td>Semaine</td>
-	<td>{{form.semin.erros}}{{form.semin}}</td>
+	<td>{{form.semin.errors}}{{form.semin}}</td>
 	<td>à</td>
-	<td>{{form.semax.erros}}{{form.semax}}</td>
+	<td>{{form.semax.errors}}{{form.semax}}</td>
 	<td><input type="submit"/></td>
-	<td><a href="{% url 'colloscopepdf_eleve' semin.pk semax.pk %}"><img src="{% static 'images/iconePDF.png' %}" alt="icone pdf"/></a></td>
+    <td>
+        <a class="ui button" href="{% url 'colloscope_csv' classe.pk %}">
+            <i class="icon table"></i>CSV
+        </a>
+    </td>
+    <td>
+        <a class="ui button" href="?print=1">
+            <i class="icon print"></i>Version imprimable
+        </a>
+    </td>
 </tr>
 </table>
 </form>
-<table class="tableausimple">
-	<tr class="entete">
-		<td>Jour</td>
-		{% for jour in jours %}
-		<td colspan="{{jour.nb}}">{{listejours|lookup:jour.jour}}</td>
-		{% endfor %}
-	</tr>
-	<tr class="plusclair">
-		<td>Heure</td>
-		{% for creneau in creneaux %}
-		<td>{{creneau.heure|heure}}</td>
-		{% endfor %}
-	</tr>
-	<tr class="plusclair">
-		<td>Salle</td>
-		{% for creneau in creneaux %}
-		<td>{% if creneau.salle %}{{creneau.salle}}{% endif %}</td>
-		{% endfor %}
-	</tr>
-	{% for semaine, colles in collesemaine %}
-	<tr>
-		<td style="min-width:100px;">S{{semaine}}</td>
-		{% for colle in colles %}
-		{% if colle.id_col %}<td class="colloscope" style="background-color:{{colle.couleur}}">{{dictColleurs|lookup:colle.id_colleur}}:{% if colle.temps == 20 %}{{listegroupes|lookup:colle.groupe|lookup:0}}{% elif colle.temps == 30%}{% with colle.id_eleve as key %}{{classe.dictEleves|lookup:key}}{% endwith %}{% endif %}
-		<div class="colle"><p>Date: {{colle.jourbis|date:"j/n"}} à {{colle.heure|heure}}<br/>
-		Colleur: {{colle.prenom|title}} {{colle.nom|upper}}<br/>
-		Matière: {{colle.nom_matiere}}<br/>
-		{% if colle.temps == 20 %}
-		Groupe {{colle.nomgroupe}}: {{listegroupes|lookup:colle.groupe|lookup:1}}<br/>
-		{% elif colle.temps == 30 %}
-		Élève: {{colle.prenom_eleve|title}} {{colle.nom_eleve|upper}}<br/>
+{% endif %}
+</div>
+
+<div class="ui container fluid center aligned">
+<table class="ui striped table tablecentered newcolloscope">
+    <thead>
+        <tr>
+            <th>Jour</th>
+            <th>Heure</th>
+            <th>Colleur</th>
+            <th>Salle</th>
+            {% for semaine in semaines %}
+                <th style="font-size:0.8em">{{ semaine.numero }}</th>
+            {% endfor %}
+        </tr>
+    </thead>
+    <tbody>
+        {% for matiere, creneau, colle_type, colles in creneaux_colles %}
+        {% if creneau %}
+        <tr>
+            <td>
+                {{ creneau.get_jour_display }} 
+            </td>
+            <td>
+                {{ creneau.heure|heure }} 
+            </td>
+            <td>
+                {% if colle_type %}
+                {{ colle_type.colleur.user.last_name|slice:":8" }}
+                {% endif %}
+            </td>
+            <td>
+                {{ creneau.salle }}
+            </td>
+            {% for colle in colles %}
+{% if colle %}<td class="ui popupholder colloscope center aligned" style="line-height: 0; padding: 0;"
+        {% if request.GET.print %}
+        {% else %}
+		data-html="<div class='ui fluid'><p>Date: {{colle.semaine.lundi|addtime:colle.creneau.jour|date:"j/n"}} à {{colle.creneau.heure|heure}}<br/>
+		Colleur: {{colle.colleur.user.first_name|title}} {{colle.colleur.user.last_name|upper}}<br/>
+		Matière: {{colle.matiere.nom}}<br/>
+		{% if colle.matiere.temps == 20 %}
+		Groupe {{colle.groupe.nom}}: {{dictgroupes|lookup:colle.matiere.id|lookup:colle.groupe.id|lookup:1}}<br/>
+		{% elif colle.matiere.temps == 30 %}
+		Élève: {{colle.eleve.user.first_name|title}} {{colle.eleve.user.last_name|upper}}<br/>
 		{% endif %}
-		{% if colle.salle %}Salle: {{colle.salle}}{% endif %}
-		</p></div>
-		</td>{% elif colle.ferie %}<td style="background-color:rgba(0,0,0,.4);"><div class="popup">{{colle.ferie}}</div></td>{% else %}<td></td>{% endif %}
-		{% endfor %}
-	</tr>
-	{% endfor %}
+		{% if colle.creneau.salle %}Salle: {{colle.creneau.salle}}{% endif %}
+		</p></div>" 
+        {% endif %}
+        >
+		{% if colle_type and colle.colleur == colle_type.colleur %}
+        <a class="ui label colle {% if colle.matiere.temps == 20 %}trinome{% endif %}" 
+           {% if colle.matiere.temps == 20 %}data-groupe={{ colle.groupe.nom }}{% endif %}
+           style="font-family: monospace; min-width:3em; {% if colle.matiere.temps == 20 %}color: white; {% endif %} ">
+		    {% if colle.matiere.temps == 20 %}{{dictgroupes|lookup:colle.matiere.id|lookup:colle.groupe.id|lookup:0}}{% elif colle.matiere.temps == 30 %}{% with colle.eleve.id as key %}{{classe.dictEleves|lookup:key}}{% endwith %}{% endif %}
+		{% else %}
+            <div class="ui right labeled button">
+            <a class="mini ui right pointing label trinome">{% if colle.matiere.temps == 20 %}{{dictgroupes|lookup:colle.matiere.id|lookup:colle.groupe.id|lookup:0}}{% elif colle.matiere.temps == 30 %}{% with colle.eleve.id as key %}{{classe.dictEleves|lookup:key}}{% endwith %}{% endif %}
+            </a>
+            <button class="mini ui button fluid" style="background-color:{{colle.matiere.couleur}};" >{{dictColleurs|lookup:colle.colleur.id}}</button>
+            </div>
+		{% endif %}
+				</td>{% elif colle.ferie %}<td style="background-color:rgba(0,0,0,.4);"><div class="popup">{{colle.ferie}}</div></td>{% else %}<td></td>{% endif %}
+            {% endfor %}
+        </tr>
+        {% else %}
+        <tr>
+            <td colspan="4"><b>{{ matiere.nom }}</b></td>
+        </tr>
+        {% endif %}
+        {% endfor %}
+    </tbody>
 </table>
+
+<table class="ui table striped tablecentered">
+  <thead>
+	  <tr><th>Groupe</th><th>Elève 1</th><th>Elève 2</th><th>Elève 3</th>
+	  <th>Groupe</th><th>Elève 1</th><th>Elève 2</th><th>Elève 3</th></tr>
+  </thead>
+  <tbody>
+	  {% for groupe in classe.classegroupe.all %}
+	  {% cycle '<tr>' '' %}
+	  <td>{{ groupe.nom }}</td>
+	  {% for eleve in groupe.groupeeleve.all %}
+      <td>{{ eleve }}</td>
+	  {% endfor %}
+	  {% if groupe.groupeeleve.count <= 2 %}
+	  <td></td>
+	  {% endif %}
+	  {% if groupe.groupeleve.count <= 1 %}
+	  <td></td>
+	  {% endif %}
+	  {% if groupe.groupeleve.count == 0 %}
+	  <td></td>
+	  {% endif %}
+	  {% cycle '' '</tr>' %}
+	  {% endfor %}
+  </tbody>
+</table>
+{% endblock %}
+
+{% block javascriptready %}
+var g_colors = [ "#63b598", "#ce7d78", "#ea9e70", "#a48a9e", "#648177" ,"#0d5ac1" ,
+"#f205e6" ,"#1c0365" ,"#14a9ad" ,"#4ca2f9" ,"#a4e43f" ,"#d298e2" ,"#6119d0",
+"#d2737d" ,"#c0a43c" ,"#f2510e" ,"#651be6" ,"#79806e" ,"#61da5e" ,"#cd2f00" ,
+"#9348af" ,"#01ac53" ,"#c5a4fb" ,"#996635","#b11573" ,"#4bb473" ,"#75d89e" ,
+"#2f3f94" ,"#2f7b99" ,"#da967d" ,"#34891f" ,"#b0d87b" ,"#ca4751" ,"#7e50a8" ,
+"#c4d647" ,"#e0eeb8" ,"#11dec1" ,"#289812" ,"#566ca0" ,"#ffdbe1" ,"#2f1179" ,
+"#935b6d" ,"#916988" ,"#513d98" ,"#aead3a", "#9e6d71", "#4b5bdc", "#0cd36d",
+"#250662", "#cb5bea", "#228916", "#ac3e1b", "#df514a", "#539397", "#880977",
+"#f697c1", "#ba96ce", "#679c9d", "#c6c42c", "#5d2c52", "#48b41b", "#e1cf3b",
+"#5be4f0", "#57c4d8", "#a4d17a", "#225b8", "#be608b", "#96b00c", "#088baf",
+"#f158bf", "#e145ba", "#ee91e3", "#05d371", "#5426e0", "#4834d0", "#802234",
+"#6749e8", "#0971f0", "#8fb413", "#b2b4f0", "#c3c89d", "#c9a941", "#41d158",
+"#fb21a3", "#51aed9", "#5bb32d", "#807fb", "#21538e", "#89d534", "#d36647",
+"#7fb411", "#0023b8", "#3b8c2a", "#986b53", "#f50422", "#983f7a", "#ea24a3",
+"#79352c", "#521250", "#c79ed2", "#d6dd92", "#e33e52", "#b2be57", "#fa06ec",
+"#1bb699", "#6b2e5f", "#64820f", "#1c271", "#21538e", "#89d534", "#d36647",
+"#7fb411", "#0023b8", "#3b8c2a", "#986b53", "#f50422", "#983f7a", "#ea24a3",
+"#79352c", "#521250", "#c79ed2", "#d6dd92", "#e33e52", "#b2be57", "#fa06ec",
+"#1bb699", "#6b2e5f", "#64820f", "#1c271", "#9cb64a", "#996c48", "#9ab9b7",
+"#06e052", "#e3a481", "#0eb621", "#fc458e", "#b2db15", "#aa226d", "#792ed8",
+"#73872a", "#520d3a", "#cefcb8", "#a5b3d9", "#7d1d85", "#c4fd57", "#f1ae16",
+"#8fe22a", "#ef6e3c", "#243eeb", "#1dc18", "#dd93fd", "#3f8473", "#e7dbce",
+"#421f79", "#7a3d93", "#635f6d", "#93f2d7", "#9b5c2a", "#15b9ee", "#0f5997",
+"#409188", "#911e20", "#1350ce", "#10e5b1", "#fff4d7", "#cb2582", "#ce00be",
+"#32d5d6", "#17232", "#608572", "#c79bc2", "#00f87c", "#77772a", "#6995ba",
+"#fc6b57", "#f07815", "#8fd883", "#060e27", "#96e591", "#21d52e", "#d00043",
+"#b47162", "#1ec227", "#4f0f6f", "#1d1d58", "#947002", "#bde052", "#e08c56",
+"#28fcfd", "#bb09b", "#36486a", "#d02e29", "#1ae6db", "#3e464c", "#a84a8f",
+"#911e7e", "#3f16d9", "#0f525f", "#ac7c0a", "#b4c086", "#c9d730", "#30cc49",
+"#3d6751", "#fb4c03", "#640fc1", "#62c03e", "#d3493a", "#88aa0b", "#406df9",
+"#615af0", "#4be47", "#2a3434", "#4a543f", "#79bca0", "#a8b8d4", "#00efd4",
+"#7ad236", "#7260d8", "#1deaa7", "#06f43a", "#823c59", "#e3d94c", "#dc1c06",
+"#f53b2a", "#b46238", "#2dfff6", "#a82b89", "#1a8011", "#436a9f", "#1a806a",
+"#4cf09d", "#c188a2", "#67eb4b", "#b308d3", "#fc7e41", "#af3101", "#ff065",
+"#71b1f4", "#a2f8a5", "#e23dd0", "#d3486d", "#00f7f9", "#474893", "#3cec35",
+"#1c65cb", "#5d1d0c", "#2d7d2a", "#ff3420", "#5cdd87", "#a259a4", "#e4ac44",
+"#1bede6", "#8798a4", "#d7790f", "#b2c24f", "#de73c2", "#d70a9c", "#25b67",
+"#88e9b8", "#c2b0e2", "#86e98f", "#ae90e2", "#1a806b", "#436a9e", "#0ec0ff",
+"#f812b3", "#b17fc9", "#8d6c2f", "#d3277a", "#2ca1ae", "#9685eb", "#8a96c6",
+"#dba2e6", "#76fc1b", "#608fa4", "#20f6ba", "#07d7f6", "#dce77a", "#77ecca"];
+
+$('.trinome')
+    .each(function(i,e) {
+        var groupe = $(e).data('groupe');
+        $(e).css('background-color', g_colors[groupe]);
+    });
+$('.trinome')
+    .hover(function() {
+    var groupe = $(this).data('groupe');
+    $('.trinome').each(function(i,e) {
+        if ($(e).data('groupe') != groupe) {
+            $(e).css('background-color', '#eeeeee');
+        }
+    });
+}, function() {
+$('.trinome')
+    .each(function(i,e) {
+        var groupe = $(e).data('groupe');
+        $(e).css('background-color', g_colors[groupe]);
+    });
+})
 {% endblock %}
