--- a/public/css/new_style.css
+++ b/public/css/new_style.css
@@ -1,25 +1,3 @@
-html 
-{ 
-	margin:0;
-	padding:0;
-	background: #CCCBC6;
-	font-family: 'ubuntu', 'Trebuchet MS', Arial, sans-serif; 
-	font-size:12px;
-	color:black;
-}
-body
-{
-	margin: 0;
-	padding: 0;
-}
-ul /* on vire les points des listes */
-{
-	list-style:none;
-}
-a /* on vire la deco des liens */
-{
-	text-decoration:none;
-}
 #bloc /* bloc qui englobe tout */
 {
 	width:1240px;
@@ -52,12 +30,6 @@ a /* on vire la deco des liens */
 }
 #header :link, #header :hover, #header :active, #header :visited {
   color: inherit;
-}
-h1 /* titre de l'en-tête */
-{
-	margin-bottom:10px;
-	margin-top: 10px;
-	font-size: 50px ;
 }
 ul.accueil 
 {
@@ -518,14 +490,6 @@ td.colloscope:hover
 	background-color: black;
 	background-color: rgba(0,0,0,.4) !important;
 }
-footer
-{
-	position: fixed;
-	left: 10px;
-	bottom: 10px;
-	color: white;
-	font-size: 9px;
-}
 div#grise
 {
 	display: none;
@@ -568,11 +532,6 @@ table.tableausimple label
 	display: inline-block;
 }
 
-textarea
-{
-	margin:auto;
-}
-
 div.scroll
 {
 	max-height:80px;
@@ -587,3 +546,32 @@ div.bigscroll
 	text-align: left;
 }
 
+.newcolloscope > tbody > tr > td 
+{
+    padding: 0 !important;
+}
+
+
+
+.ui .card > .content > .header
+{
+    font-size: 0.7em !important;
+}
+.ui .card > .content > .meta
+{
+    font-size: 0.6em;
+}
+
+@media print {
+   @page {
+   }
+
+   body {
+    font-size: 0.8em;
+   }
+
+   .newcolloscope > tbody > tr > td 
+   {
+   }
+
+}
