--- a/templates/accueil/ecrire.html
+++ b/templates/accueil/ecrire.html
@@ -2,11 +2,16 @@
 {% load static %}
 {% block body %}
 
-<table class="accueil"><tr><td>Nouveau message</td></tr></table>
+    <div class="ui text container">
+        <h1 class="ui center aligned icon header">
+            <i class="circular pencil icon"></i>
+            Nouveau message
+        </h1>
+
 
 <form method="post">
 	{% csrf_token %}
-	<table class="tableausimple">
+	<table class="ui table labelcompact">
 		<tr >
 			<th rowspan="{{form.rowspan}}">Destinataires</th>
 			{% for classe, prof, profs, colleur, colleurs, groupe, groupes, eleve, eleves in form.champs %}
@@ -57,7 +62,8 @@
 	</table>
 </form>
 
-<table class="accueil"><tr><td><a href="{% url 'messages' %}">Retour</a></td></tr></table>
+<a class="ui button huge" href="{% url 'messages' %}">Retour</a>
+    </div>
 {% endblock %}
 {% block javascript %}
 <script type="text/javascript" src="{% static 'javascript/ecrire.js' %}"></script>
