--- a/templates/accueil/profil.html
+++ b/templates/accueil/profil.html
@@ -1,14 +1,20 @@
 {% extends 'base.html' %}
 {% load customfilter %}
 {% block body %}
-<table class="accueil"><tr><td>Modifier profil</td></tr></table>
+
+    <div class="ui text container">
+        <h1 class="ui center aligned icon header">
+            <i class="circular pencil alternate icon"></i>
+Modifier profil
+        </h1>
 <form method="post">
 {% csrf_token %}
-<table class="tableausimple">
+<table class="ui table">
 	<tr><td colspan="2">(Mot de passe inchangé si non renseigné)</td></tr>
 		{{ form.as_table }}
-	<tr><td colspan="2"><input type="submit"/></td></tr>
 </table>
+<input class="ui button primary" type="submit" value="Modifier"/>
+<a class="button ui primary" href="{% url 'accueil' %}">Retour</a>
 </form>
-<table class="accueil"><tr><td><a href="{% url 'accueil' %}">Annuler</a></td></tr></table>
+    </div>
 {% endblock %}
