--- a/templates/administrateur/config.html
+++ b/templates/administrateur/config.html
@@ -1,14 +1,19 @@
 {% extends 'administrateur/action.html' %}
 {% load static %}
 {% block body %}
-	<table class="accueil"><tr><td>Configuration du site</td></tr></table>
+<div class="ui text container">
+        <h1 class="ui center aligned icon header">
+            <i class="circular cogs icon"></i>
+            Configuration du site
+        </h1>
 	<form method="POST">
 		{% csrf_token %}
-	<table class="tableausimple">
+	<table class="ui table">
 		{{form.as_table}}
-	<tr><td colspan="2"><input type="submit"/></td></tr>
+	<tr><td colspan="2"><input class="ui button primary" type="submit"/></td></tr>
 	</table>
 	</form>
+</div>
 {% endblock %}
 {% block javascript %}
 <script type="text/javascript" src="{% static 'javascript/config.js' %}"></script>
