--- a/templates/administrateur/eleve.html
+++ b/templates/administrateur/eleve.html
@@ -2,51 +2,71 @@
 {% load static %}
 {% load customfilter %}
 {% block body %}
-	<table class="accueil"><tr><td>Élèves</td></tr></table>
+    <div class="ui text container">
+        <h1 class="ui center aligned icon header">
+            <i class="circular users icon"></i>
+            Élèves
+        </h1>
+        <div class="ui three column center aligned grid">
+                    <div class="middle aligned row">
+                        <div class="column">
 	<form method="post">
 	{% csrf_token %}
-	<table class="tableausimple">
+	<table class="ui table">
 	{{ form.as_table }}
-	<tr><td colspan="2"><input type="submit" value="Envoyer" name = "selectclasse"/></td></tr>
+	<tr><td colspan="2"><input class="ui button primary" type="submit" value="Envoyer" name = "selectclasse"/></td></tr>
 	</table>
 	</form>
+        </div>
+        <div class="column">
 	<form method="post">
 	{% csrf_token %}
-	<table class="tableausimple">
+	<table class="ui table">
+        <thead>
 	<tr><th colspan="2">Chercher un élève</th></tr>
+        </thead>
+        <tbody>
 	{{ form3.as_table }}
-	<tr><td colspan="2"><input type="submit" value="Chercher" name = "chercheuser"/></td></tr>
+	<tr><td colspan="2"><input class="ui button primary" type="submit" value="Chercher" name = "chercheuser"/></td></tr>
+        </tbody>
 	</table>
 	</form>
-	<table class="accueil">
-	<tr><td><a href="{% url 'csv_eleve' %}">Importer des élèves depuis un fichier CSV</a></td>
-		<td><a href="{% url 'ajout_eleve' %}">Ajouter des élèves</a></td>
-	</tr>
-	</table>
+        </div>
+        <div class="column">
+            <div class="ui vertical buttons">
+	    <a class="ui button primary" href="{% url 'csv_eleve' %}">Importer des élèves depuis un fichier CSV</a>
+		<a class="ui button primary" href="{% url 'ajout_eleve' %}">Ajouter des élèves</a>
+            </div>
+        </div>
+                    </div>
+        </div>
 
-	<table class="accueil">
-	<tr><td>Liste des élèves</td></tr>
-	</table>
+        <h2 class="ui header center">Liste des élèves ({{ form2.fields.eleve.queryset|length }})</h2>
+    </div>
+    <div class="ui container fluid">
 	<form method="post">
 	{% csrf_token %}
-	<table class="tableausimple" id="suppr">
-		<tr class="entete">
-			<td>Sélectionner{{form2.colleur.errors}}</td>
-			<td>{% if tri == True %}<a href = "{% url 'gestion_eleve_tri' 0 %}" title="Trier les élèves par nom puis par classe" >Nom</a>{% else %}Nom{% endif %}</td>
-			<td>Prénom</td>
-			<td>Identifiant</td>
-			<td>Email</td>
-			<td>Date de naissance</td>
-			<td>Lieu de naissance</td>
-			<td>n° INE</td>
-			<td>{% if tri == False %}<a href = "{% url 'gestion_eleve_tri' 1 %}" title="Trier les élèves par classe puis par nom" >Classe</a>{% else %}Classe{% endif %}</td>
-			<td>LV1</td>
-			<td>LV2</td>
-			<td>Photo</td>
-			<td>Modifier</td>
-			<td>Supprimer</td>
-			<td>RGPD</td>
+	<table class="tableausimple ui celled table" id="suppr">
+        <thead>
+		<tr>
+			<th>Sélectionner{{form2.colleur.errors}}</th>
+			<th>{% if tri == True %}<a href = "{% url 'gestion_eleve_tri' 0 %}" title="Trier les élèves par nom puis par classe" >Nom</a>{% else %}Nom{% endif %}</th>
+			<th>Prénom</th>
+			<th>Identifiant</th>
+			<th>Email</th>
+			<th>Date de naissance</th>
+			<th>Lieu de naissance</th>
+			<th>n° INE</th>
+			<th>{% if tri == False %}<a href = "{% url 'gestion_eleve_tri' 1 %}" title="Trier les élèves par classe puis par nom" >Classe</a>{% else %}Classe{% endif %}</th>
+			<th>LV1</th>
+			<th>LV2</th>
+			<th>Photo</th>
+			<th>Modifier</th>
+			<th>Supprimer</th>
+			<th>RGPD</th>
 		</tr>
+        </thead>
+        <tbody>
 		{% for eleve,widget in form2.fields.eleve.queryset|tzip:form2.eleve %}
 		<tr>
 			<td>{{widget}}</td>
@@ -74,8 +94,10 @@
 			<td colspan="3"><input type="submit" value="passer la sélection en lv1" name="lv1"/>{{form2.lv1}}</td>
 			<td colspan="3"><input type="submit" value="passer la sélection en lv2" name="lv2"/>{{form2.lv2}}</td>
 		</tr>
+        </tbody>
 	</table>
 	</form>
+    </div>
 {% endblock %}
 {% block javascript %}
 <script type="text/javascript" src="{% static 'javascript/suppression.js' %}"></script>
