--- a/templates/colleur/action.html
+++ b/templates/colleur/action.html
@@ -2,78 +2,104 @@
 {% load static %}
 {% load customfilter %}
 {% block nav %}
-<div id="nav"> 
-	<ul id="menu" style="position: relative;z-index: 10;">
-		<li><a href="#">Notes</a>
-			<ul>
+<div class="ui container fluid">
+<div class="ui tabular menu inverted" style="margin:0"> 
+    <div class="ui simple dropdown item">
+		Notes
+        <i class="dropdown icon"></i>
+        <div class="menu">
 		{% for classe in user.colleur.classes.all %}
 			{% if request.session.matiere in classe.matierespk %}
-				<li><a href="{% url 'note_colleur' classe.pk %}">{{classe.nom}}</a></li>
+				<a class="item" href="{% url 'note_colleur' classe.pk %}">{{classe.nom}}</a>
 			{% endif %}
 		{% endfor %}
-			</ul>
-		</li>
-		<li><a href="#">Résultats</a>
-			<ul>
+		</div>
+    </div>
+    <div class="ui simple dropdown item">
+        Résultats
+        <i class="dropdown icon"></i>
+        <div class="menu">
 		{% for classe in user.colleur.classes.all %}
 			{% if request.session.matiere in classe.matierespk %}
-				<li><a href="{% url 'resultat_colleur' classe.pk %}">{{classe.nom}}</a></li>
+				<a class="item" href="{% url 'resultat_colleur' classe.pk %}">{{classe.nom}}</a>
 			{% endif %}
 		{% endfor %}
-			</ul>
-		</li>
-		<li><a href="#">Programme</a>
-			<ul>
+        </div>
+    </div>
+    <div class="ui simple dropdown item">
+        Programme
+        <i class="dropdown icon"></i>
+        <div class="menu">
 		{% for classe in user.colleur.classes.all %}
 			{% if request.session.matiere in classe.matierespk %}
-				<li><a href="{%  url 'programme_colleur' classe.pk %}">{{classe.nom}}</a></li>
+				<a class="item" href="{%  url 'programme_colleur' classe.pk %}">{{classe.nom}}</a>
 			{% endif %}
 		{% endfor %}
-			</ul>
-		</li>
-		<li><a href="#">Colloscope</a>
-			<ul>
+        </div>
+    </div>
+    <div class="ui simple dropdown item">
+        Colloscope
+        <i class="dropdown icon"></i>
+        <div class="menu">
 		{% for classe in user.colleur.classes.all %}
-				<li><a href="{% url 'colloscope_colleur' classe.pk %}">{{classe.nom}}</a></li>
+			<a class="item" href="{% url 'colloscope_colleur' classe.pk %}">{{classe.nom}}</a>
 		{% endfor %}
-			</ul>
-		</li>
-		<li><a href="{% url 'agenda_colleur' %}">Agenda</a></li>
-		<li><a href="{% url 'decompte_colleur' %}">Décompte</a></li>
-		{% if user.colleur.modifgroupe %}
-		<li><a href="#">Groupes</a>
-			<ul>
+        </div>
+    </div>
+</div>
+<div class="ui tabular menu inverted" style="margin:0"> 
+    <a class="item" href="{% url 'agenda_colleur' %}">Agenda</a>
+    <a class="item" href="{% url 'decompte_colleur' %}">Décompte</a>
+    {% if user.colleur.modifgroupe %}
+    <div class="ui simple dropdown item">
+        Groupes
+        <i class="dropdown icon"></i>
+        <div class="menu">
 		{% for classe in user.colleur.classeGroupes %}
-			<li><a href="{% url 'groupe_colleur' classe.pk %}">{{classe.nom}}</a></li>
+		    <a class="item" href="{% url 'groupe_colleur' classe.pk %}">{{classe.nom}}</a>
 		{% endfor %}
-			</ul>
-		</li>
-		{% endif %}
-		{% with user.colleur.classeprofprincipal.all as classes %}
-		{% if classes %}
-		<li><a href="#">Élèves</a>
-			<ul>
+		</div>
+    </div>
+    {% endif %}
+    {% with user.colleur.classeprofprincipal.all as classes %}
+    {% if classes %}
+    <div class="ui simple dropdown item">
+        Élèves
+        <i class="dropdown icon"></i>
+        <div class="menu">
+		{% for classe in classes %}
+			<a class="item" href="{% url 'eleves_colleur' classe.pk %}">{{classe}}</a>
+        {% endfor %}
+        </div>
+    </div>
+
+    <div class="ui simple dropdown item">
+        Trombinoscope
+        <i class="dropdown icon"></i>
+        <div class="menu">
+		{% for classe in classes %}
+			<a class="item" href="{% url 'trombinoscope_colleur' classe.pk %}">{{classe}}</a>
+        {% endfor %}
+        </div>
+    </div>
+    {% endif %}
+    {% endwith %}
+    {% get_ects as ects %}
+    {% if ects %}
+    {% with user.colleur.ectsclasses as classes %}
+    {% if classes %}
+    <div class="ui simple dropdown item">
+        ECTS
+        <i class="dropdown icon"></i>
+        <div class="menu">
 			{% for classe in classes %}
-				<li><a href="{% url 'eleves_colleur' classe.pk %}">{{classe}}</a></li>
+				<a class="item" href="{% url 'ects_matieres' classe.pk %}">{{classe}}</a>
 			{% endfor %}
-			</ul>
-		</li>
-		{% endif %}
-		{% endwith %}
-		{% get_ects as ects %}
-		{% if ects %}
-		{% with user.colleur.ectsclasses as classes %}
-		{% if classes %}
-		<li><a href="#">ECTS</a>
-			<ul>
-			{% for classe in classes %}
-				<li><a href="{% url 'ects_matieres' classe.pk %}">{{classe}}</a></li>
-			{% endfor %}
-			</ul>
-		</li>
-		{% endif %}
-		{% endwith %}
-		{% endif %}
-	</ul>
+        </div>
+    </div>
+    {% endif %}
+    {% endwith %}
+    {% endif %}
+</div>
 </div>
 {% endblock %}
