--- a/templates/colleur/agenda.html
+++ b/templates/colleur/agenda.html
@@ -3,25 +3,35 @@
 {% load customfilter %}
 {% block body %}
 {% get_mathjax as latex %}
-<table class="accueil"><tr><td>Agenda</td></tr></table>
-<table class="tableausimple">
-<tr class="entete">
-	<td>Date</td>
-	<td>Heure</td>
-	<td>Matiere</td>
-	<td>Classe</td>
-	<td>Programme</td>
-	<td>Groupe/Élève</td>
-	<td>Salle</td>
-	<td>Noter</td>
+
+<div class="ui text container">
+    <h1 class="ui center aligned icon header">
+        <i class="circular calendar icon"></i>
+        Agenda
+    </h1>
+</div>
+<div class="ui container">
+<table class="ui table tablecentered">
+    <thead>
+<tr class="">
+	<th>Date</th>
+	<th>Heure</th>
+	<th>Matiere</th>
+	<th>Classe</th>
+	<th>Programme</th>
+	<th>Groupe/Élève</th>
+	<th>Salle</th>
+	<th>Noter</th>
 </tr>
+</thead>
+<tbody>
 {% for colle in colles %}
 <tr>
-	<td>{{colle.jour|date:"l j F"}}</td>
+    <td>{{colle.jour|date:"l j F"}}</td>
 	<td>{{colle.heure|heure}}</td>
 	<td style="background-color:{% if colle.jour <= jour %}grey{% else %}{{colle.couleur}}{% endif %}">{{colle.nom_matiere|title}}</td>
 	<td>{{ colle.nom_classe |default_if_none:''}}</td>
-	<td>{% if colle.fichier != None and colle.fichier != "" %}<a href="{{media_url}}{{colle.fichier}}">{% if colle.titre %}{{colle.titre}}{% endif %}</a>{% elif colle.titre %}{{ colle.titre }}{% endif %}{% if colle.detail %}<div class="popup">{% if latex %}{{colle.detail}}{% else %}{{colle.detail|linebreaksbr}}{% endif %}</div>{% endif %}</td>
+	<td>{% if colle.fichier != None and colle.fichier != "" %}<a href="{{media_url}}{{colle.fichier}}">{% if colle.titre %}{{colle.titre}}{% endif %}</a>{% elif colle.titre %}{{ colle.titre }}{% endif %}</td>
 	{% if colle.nom_groupe %}
 	<td>{{colle.nom_groupe}}<div class="popup">{{ colle.groupe }}</div></td>
 	{% elif colle.eleve %}
@@ -30,10 +40,12 @@
 	<td>{{colle.nom_classe}}</td>
 	{% endif %}
 	<td>{% if colle.salle %}{{colle.salle}}{% endif %}</td>
-	<td>{% if colle.jour <= jour %}{% if colle.nbnotes == 0 %}{% if colle.temps == 20 %}<a href="{% url 'collenote_colleur' colle.pk %}">{% elif colle.temps == 30 %}<a href="{% url 'collenoteeleve_colleur' colle.pk %}">{% elif colle.temps == 60 %}<a href="{% url 'collenoteeleve_colleur' colle.pk %}">{% endif %}Noter</a>{% endif %}{% endif %}</td>
+    <td>{% if colle.jour <= jour %}{% if colle.nbnotes == 0 %}{% if colle.temps == 20 %}<a href="{% url 'collenote_colleur' colle.pk %}">{% elif colle.temps == 30 %}<a href="{% url 'collenoteeleve_colleur' colle.pk %}">{% elif colle.temps == 60 %}<a href="{% url 'collenoteeleve_colleur' colle.pk %}">{% endif %}Noter</a>{% endif %}{% endif %}</td>
 </tr>
 {% endfor %}
+</tbody>
 </table>
+</div>
 {% endblock %}
 {% block javascript %}
 {% get_mathjax as latex %}
