--- a/templates/colleur/home.html
+++ b/templates/colleur/home.html
@@ -2,17 +2,31 @@
 
 {% block body %}
 
-<table class="accueil"><tr><td>Connexion - Colleur</td></tr></table>
+<div class="ui text container">
+    <h1 class="ui center aligned icon header">
+        <i class="circular user icon"></i>
+        Connexion - Colleur
+    </h1>
+
 {% if error %}
-<div class="error">Utilisateur inexistant ou mauvais de mot de passe.</div>
+<div class="ui negative message">
+    <div class="header">Erreur de connexion</div>
+    Utilisateur inexistant ou mauvais de mot de passe.
+</div>
 {% endif %}
 <form method="post">
 {% csrf_token %}
-<table class="tableausimple">
+<table class="ui table">
 {{ form.as_table }}
-	<tr><td colspan="2"><input type="submit"/></td></tr>
+	<tr><td colspan="2"><input class="ui button primary" type="submit"
+    value="Se connecter" /></td></tr>
 </table>
 </form>
-<table class="accueil"><tr><td><a href="{% url 'accueil' %}">Annuler</a></td></tr></table>
+
+<center>
+    <a class="ui button red" href="{% url 'accueil' %}">Retour</a>
+</center>
+
+</div>
 
 {% endblock %}
