--- a/templates/eleve/action.html
+++ b/templates/eleve/action.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block nav %}
-<div id="nav"> 
-	<ul id="menu">
-		<li><a href="{% url 'bilan_eleve' %}">Bilan</a></li>
-		<li><a href="{% url 'note_eleve' %}">Notes</a></li>
-		<li><a href="{% url 'programme_eleve' %}">Programme</a></li>
-		<li><a href="{% url 'colloscope_eleve' %}">Colloscope</a></li>
-		<li><a href="{% url 'agenda_eleve' %}">Agenda</a></li>
-	</ul>
+<div class="ui container fluid">
+<div class="ui tabular menu inverted" style="margin:0"> 
+	<a class="item" href="{% url 'bilan_eleve' %}">Bilan</a>
+	<a class="item" href="{% url 'note_eleve' %}">Notes</a>
+	<a class="item" href="{% url 'programme_eleve' %}">Programme</a>
+	<a class="item" href="{% url 'colloscope_eleve' %}">Colloscope</a>
+	<a class="item" href="{% url 'agenda_eleve' %}">Agenda</a>
+</div>
 </div>
 {% endblock %}
