--- a/templates/eleve/agenda.html
+++ b/templates/eleve/agenda.html
@@ -3,15 +3,24 @@
 {% load customfilter %}
 {% block body %}
 {% get_mathjax as latex %}
-<table class="accueil"><tr><td>Agenda</td></tr></table>
-<table class="tableausimple">
-<tr class="entete">
-	<td>Date</td>
-	<td>Heure</td>
-	<td>Matiere</td>
-	<td>Colleur</td>
-	<td>Programme</td>
-	<td>Salle</td>
+
+<div class="ui text container">
+    <h1 class="ui center aligned icon header">
+        <i class="circular calendar icon"></i>
+        Agenda
+    </h1>
+
+</div>
+<div class="ui container">
+<table class="ui table tablecentered">
+    <thead>
+<tr class="">
+	<th>Date</th>
+	<th>Heure</th>
+	<th>Matiere</th>
+	<th>Colleur</th>
+	<th>Programme</th>
+	<th>Salle</th>
 </tr>
 {% for colle in colles %}
 <tr>
@@ -19,11 +28,12 @@
 	<td>{{colle.heure|heure}}</td>
 	<td style="background-color:{% if colle.jour < jour.weekday %}grey{% else %}{{colle.couleur}}{% endif %}">{{colle.nom_matiere}}</td>
 	<td>{{colle.prenom|title}} {{colle.nom|upper}}</td>
-	<td>{% if colle.fichier %}<a href="{{media_url}}{{colle.fichier}}">{{colle.titre|title}}</a>{% else %}{% if colle.titre %}{{ colle.titre|title}}{% endif %}{% endif %}{% if colle.detail %}<div class="popup">{% if latex %}{{colle.detail}}{% else %}{{colle.detail|linebreaksbr}}{% endif %}</div>{% endif %}</td>
+	<td>{% if colle.fichier %}<a href="{{media_url}}{{colle.fichier}}">{{colle.titre|title}}</a>{% else %}{% if colle.titre %}{{ colle.titre|title}}{% endif %}{% endif %}</td>
 	<td>{% if colle.salle %}{{colle.salle}}{% endif %}</td>
 </tr>
 {% endfor %}
 </table>
+</div>
 {% endblock %}
 {% block javascript %}
 {% get_mathjax as latex %}
