--- a/templates/eleve/home.html
+++ b/templates/eleve/home.html
@@ -1,18 +1,30 @@
 {% extends 'base.html' %}
 
 {% block body %}
+<div class="ui text container">
+    <h1 class="ui center aligned icon header">
+        <i class="circular user icon"></i>
+        Connexion - Élève
+    </h1>
 
-<table class="accueil"><tr><td>Connexion - Élève</td></tr></table>
 {% if error %}
-<div class="error">Utilisateur inexistant ou mauvais de mot de passe.</div>
+<div class="ui negative message">
+    <div class="header">Erreur de connexion</div>
+    Utilisateur inexistant ou mauvais de mot de passe.
+</div>
 {% endif %}
 <form method="post">
 {% csrf_token %}
-<table class="tableausimple">
+<table class="ui table">
 {{ form.as_table }}
 	<tr><td colspan="2"><input type="submit"/></td></tr>
 </table>
 </form>
-<table class="accueil"><tr><td><a href="{% url 'accueil' %}">Annuler</a></td></tr></table>
+
+<center>
+    <a class="ui button red" href="{% url 'accueil' %}">Retour</a>
+</center>
+
+</div>
 
 {% endblock %}
