--- a/templates/eleve/programme.html
+++ b/templates/eleve/programme.html
@@ -3,40 +3,60 @@
 {% load customfilter %}
 {% block body %}
 {% get_mathjax as latex %}
-<table class="accueil"><tr><td>Liste des programmes de colle</td></tr></table>
+
+    <div class="ui text container">
+        <h1 class="ui center aligned icon header">
+            <i class="circular book icon"></i>
+Liste des programmes de colle
+        </h1>
 <form method="POST">
 	{% csrf_token %}
-	<table class="tableausimple">
+	<table class="ui table">
 		{{ form.as_table }}
-		<tr><td colspan="2"><input type="submit"/></td></tr>
+		<tr><td colspan="2"><input class="ui button primary" type="submit"/></td></tr>
 	</table>
 </form>
-<table class="tableausimple">
-<tr class="entete">
-	{% if not matiere %}
-	<td>Matière</td>
-	{% endif %}
-	<td>Semaine(s)</td>
-	<td>Titre</td>
-	<td>Fichier</td>
-	<td>Programme</td>
-</tr>
-{% for programme in programmes %}
-	<tr>
-		{% if not matiere %}
-		<td style="background-color:{{programme.matiere.couleur}}">{{programme.matiere.nom|title}}</td>
-		{% endif %}
-		<td>n°{% for sem in programme.semaine.all %}{{sem.numero}}{% if not forloop.last %}-{% endif %}{% endfor %}</td>
-		<td>{{programme.titre|title}}</td>
-		{% if programme.fichier %}
-		<td style="height:200px;width:150px">{% if jpeg %}<a class="image" href="{{media_url}}{{programme.fichier}}"><img src="{{programme.fichier.url|image}}" alt="mini jpeg programme"/></a>{% else %}<a href="{{programme.fichier.url}}"><img src="{% static 'images/iconePDF.png' %}" alt="icone pdf"/></a>{% endif %}</td>
-		{% else %}
-		<td></td>
-		{% endif %}
-		<td class="prog_colle"><p>{% if latex %}{{programme.detail}}{% else %}{{programme.detail|linebreaksbr}}{% endif %}</p></td>
-	</tr>
-{% endfor %}
-</table>
+    </div>
+    <div class="ui text container">
+
+	{% for programme in programmes %}
+    <div class="ui segments">
+        <div class="ui horizontal segments">
+            <div class="ui segment black inverted ">
+                {{ programme.matiere.nom|title }}
+            </div>
+            <div class="ui segment blue">
+                <b>Semaine</b>
+                {% for sem in programme.semaine.all %}
+                    {{sem}}{% if not forloop.last%}, {% endif %}
+                {% endfor %}
+            </div>
+            <div class="ui segment blue inverted">
+                {{ programme.titre }}
+            </div>
+            {% if programme.fichier %}
+            <div class="ui segment">
+		        <a class="ui button"
+                   href="{{programme.fichier.url}}">Fichier associé</a>
+            </div>
+            {% endif %}
+        </div>
+        <div class="ui segment">
+		    {{programme.detail|linebreaksbr}}
+        </div>
+		{% if isprof %}
+        <div class="ui horizontal segments">
+            <div class="ui segment">
+		<a class="ui button primary" href="{% url 'programmemodif_colleur' programme.pk %}">Modifier</a>
+            </div>
+            <div class="ui segment">
+		<a class="ui button primary" href="{% url 'programmesuppr_colleur' programme.pk %}">Supprimer</a>
+            </div>
+        </div>
+        {% endif %}
+    </div>
+    {% endfor %}
+   </div>
 {% endblock %}
 {% block javascript %}
 {% get_mathjax as latex %}
